# most-suitable-mobile-game-name-generator-for-Chinese-people

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
lib/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
lib/x86_64-w64-mingw32/lib/cmake/SDL2_image/: sdl2_image-config.cmake
lib/x86_64-w64-mingw32/lib/cmake/SDL2_mixer/: sdl2_mixer-config.cmake
lib/x86_64-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
